--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,4 +1,8 @@
-$color1: #f05d21;
+$color1: #d6f8b8;
+$color2: #acdeaa;
+$color3: #8fbbaf;
+$color4: #168124;
+$color5: #fed049;
 $flex-box: flex;
 $centerbt: space-between;
 $t1s: 1s linear;
