--- a/scss/components/_body.scss
+++ b/scss/components/_body.scss
@@ -2,9 +2,15 @@
 body {
     font-family: 'Roboto', 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
+    color:black;
 
     h1 {
         font-weight: 400;
+    
+        p {
+            @include margenes;
+        }
+
     }
 
 }
