--- a/scss/components/_footer-menu.scss
+++ b/scss/components/_footer-menu.scss
@@ -6,7 +6,7 @@ footer {
             display: $flex-box;
             width: 100%;
             flex-wrap: wrap;
-            background-color: #666666;
+            background-color: $color4;
             justify-content: center;
             text-align: center;
         
@@ -32,7 +32,7 @@ footer {
                                 align-content: center;
 
                                 &:hover {
-                                    color: $color1;
+                                    color: $color2;
                                 }
                             }
                         }
