--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin margenes {
-    margin-left: 40px;
-    margin-right: 40px;
+@mixin paddings {
+    padding-left: 40px;
+    padding-right: 40px;
 }
