--- a/scss/components/_main-quienes.scss
+++ b/scss/components/_main-quienes.scss
@@ -4,7 +4,7 @@
 #quienes, #filosofia {
     padding-top: 55px;
     background-color: $color2;
-    @include margenes;
+    @include paddings;
 
     
 }
