--- a/scss/components/_main-servicios.scss
+++ b/scss/components/_main-servicios.scss
@@ -1,9 +1,14 @@
 /* Main: Servicios */
 .mi-container {
-    @include margenes;
+    @include paddings;
 }
 
-
+.ta-2 {
+    height: 150px;
+    width: 150px;
+    margin:10px auto;
+    display:block;
+}
 
 #servicios {
         background-color: $color5;
